ODP-1095: make this compatible with JDK8