@@ -4,6 +4,7 @@
 
 package com.linkedin.kafka.cruisecontrol.analyzer;
 
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -22,7 +23,7 @@ import java.util.List;
 public enum ActionAcceptance {
   ACCEPT, REPLICA_REJECT, BROKER_REJECT;
 
-  private static final List<ActionAcceptance> CACHED_VALUES = List.of(values());
+  private static final List<ActionAcceptance> CACHED_VALUES = Arrays.asList(values());
 
   /**
    * Use this instead of values() because values() creates a new array each time.
