@@ -4,6 +4,7 @@
 
 package com.linkedin.kafka.cruisecontrol.analyzer;
 
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -27,7 +28,7 @@ public enum ActionType {
   INTER_BROKER_REPLICA_SWAP("SWAP"),
   INTRA_BROKER_REPLICA_SWAP("INTRA_BROKER_SWAP");
 
-  private static final List<ActionType> CACHED_VALUES = List.of(values());
+  private static final List<ActionType> CACHED_VALUES = Arrays.asList(values());
   private final String _balancingAction;
 
   ActionType(String balancingAction) {
