@@ -5,6 +5,7 @@
 package com.linkedin.kafka.cruisecontrol.common;
 
 import com.linkedin.kafka.cruisecontrol.servlet.response.JsonResponseField;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -20,7 +21,7 @@ public enum Statistic {
   ST_DEV("STD");
 
   private final String _stat;
-  private static final List<Statistic> CACHED_VALUES = List.of(values());
+  private static final List<Statistic> CACHED_VALUES = Arrays.asList(values());
 
   Statistic(String stat) {
     _stat = stat;
