@@ -5,6 +5,7 @@
 package com.linkedin.kafka.cruisecontrol.detector;
 
 import com.linkedin.cruisecontrol.detector.Anomaly;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -73,7 +74,7 @@ public class AnomalyState {
   public enum Status {
     DETECTED, IGNORED, FIX_STARTED, FIX_FAILED_TO_START, CHECK_WITH_DELAY, LOAD_MONITOR_NOT_READY, COMPLETENESS_NOT_READY;
 
-    private static final List<Status> CACHED_VALUES = List.of(values());
+    private static final List<Status> CACHED_VALUES = Arrays.asList(values());
 
     /**
      * Use this instead of values() because values() creates a new array each time.
