@@ -4,6 +4,8 @@
 
 package com.linkedin.kafka.cruisecontrol.common;
 
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.Map;
 
 import static com.linkedin.kafka.cruisecontrol.common.DeterministicCluster.T1;
@@ -23,7 +25,12 @@ public final class TestConstants {
   public static final long TOPIC_POPULARITY_SEED = 7234;
   public static final Map<Resource, Long> UTILIZATION_SEED_BY_RESOURCE;
   static {
-    UTILIZATION_SEED_BY_RESOURCE = Map.of(Resource.CPU, 100000L, Resource.DISK, 300000L, Resource.NW_IN, 500000L, Resource.NW_OUT, 700000L);
+    Map<Resource, Long> utilizationSeedByResource = new HashMap<>();
+    utilizationSeedByResource.put(Resource.CPU, 100000L);
+    utilizationSeedByResource.put(Resource.DISK, 300000L);
+    utilizationSeedByResource.put(Resource.NW_IN, 500000L);
+    utilizationSeedByResource.put(Resource.NW_OUT, 700000L);
+    UTILIZATION_SEED_BY_RESOURCE = Collections.unmodifiableMap(utilizationSeedByResource);
   }
 
   public static final double ZERO_BALANCE_PERCENTAGE = 1.00;
@@ -86,13 +93,21 @@ public final class TestConstants {
   public static final Map<ClusterProperty, Number> BASE_PROPERTIES;
 
   static {
-    BASE_PROPERTIES = Map.ofEntries(Map.entry(ClusterProperty.NUM_RACKS, 10), Map.entry(ClusterProperty.NUM_BROKERS, 40),
-                                    Map.entry(ClusterProperty.NUM_DEAD_BROKERS, 0), Map.entry(ClusterProperty.NUM_BROKERS_WITH_BAD_DISK, 0),
-                                    Map.entry(ClusterProperty.NUM_REPLICAS, 50001), Map.entry(ClusterProperty.NUM_TOPICS, 3000),
-                                    Map.entry(ClusterProperty.MIN_REPLICATION, 3), Map.entry(ClusterProperty.MAX_REPLICATION, 3),
-                                    Map.entry(ClusterProperty.MEAN_CPU, 0.01), Map.entry(ClusterProperty.MEAN_DISK, 100.0),
-                                    Map.entry(ClusterProperty.MEAN_NW_IN, 100.0), Map.entry(ClusterProperty.MEAN_NW_OUT, 100.0),
-                                    Map.entry(ClusterProperty.POPULATE_REPLICA_PLACEMENT_INFO, 0));
+    Map<ClusterProperty, Number> properties = new HashMap<>();
+    properties.put(ClusterProperty.NUM_RACKS, 10);
+    properties.put(ClusterProperty.NUM_BROKERS, 40);
+    properties.put(ClusterProperty.NUM_DEAD_BROKERS, 0);
+    properties.put(ClusterProperty.NUM_BROKERS_WITH_BAD_DISK, 0);
+    properties.put(ClusterProperty.NUM_REPLICAS, 50001);
+    properties.put(ClusterProperty.NUM_TOPICS, 3000);
+    properties.put(ClusterProperty.MIN_REPLICATION, 3);
+    properties.put(ClusterProperty.MAX_REPLICATION, 3);
+    properties.put(ClusterProperty.MEAN_CPU, 0.01);
+    properties.put(ClusterProperty.MEAN_DISK, 100.0);
+    properties.put(ClusterProperty.MEAN_NW_IN, 100.0);
+    properties.put(ClusterProperty.MEAN_NW_OUT, 100.0);
+    properties.put(ClusterProperty.POPULATE_REPLICA_PLACEMENT_INFO, 0);
+    BASE_PROPERTIES = Collections.unmodifiableMap(properties);
   }
 
   // Broker and disk capacity (homogeneous cluster is assumed).
@@ -102,11 +117,17 @@ public final class TestConstants {
   public static final String LOGDIR1 = "/mnt/i01";
 
   static {
-    BROKER_CAPACITY =
-        Map.of(Resource.CPU, TestConstants.TYPICAL_CPU_CAPACITY, Resource.DISK, TestConstants.LARGE_BROKER_CAPACITY, Resource.NW_IN,
-               TestConstants.LARGE_BROKER_CAPACITY, Resource.NW_OUT, TestConstants.MEDIUM_BROKER_CAPACITY);
+    Map<Resource, Double> capacity = new HashMap<>(Resource.cachedValues().size());
+    capacity.put(Resource.CPU, TestConstants.TYPICAL_CPU_CAPACITY);
+    capacity.put(Resource.DISK, TestConstants.LARGE_BROKER_CAPACITY);
+    capacity.put(Resource.NW_IN, TestConstants.LARGE_BROKER_CAPACITY);
+    capacity.put(Resource.NW_OUT, TestConstants.MEDIUM_BROKER_CAPACITY);
+    BROKER_CAPACITY = Collections.unmodifiableMap(capacity);
     // Disk capacity
-    DISK_CAPACITY = Map.of(LOGDIR0, TestConstants.LARGE_BROKER_CAPACITY / 2, LOGDIR1, TestConstants.LARGE_BROKER_CAPACITY / 2);
+    Map<String, Double> capacityByLogdir = new HashMap<>(2);
+    capacityByLogdir.put(LOGDIR0, TestConstants.LARGE_BROKER_CAPACITY / 2);
+    capacityByLogdir.put(LOGDIR1, TestConstants.LARGE_BROKER_CAPACITY / 2);
+    DISK_CAPACITY = Collections.unmodifiableMap(capacityByLogdir);
   }
 
   // Broker capacity config file for test.
