@@ -17,6 +17,7 @@ import com.linkedin.kafka.cruisecontrol.monitor.sampling.holder.BrokerMetricSamp
 import com.linkedin.kafka.cruisecontrol.monitor.sampling.holder.PartitionMetricSample;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
@@ -81,8 +82,8 @@ public class CruiseControlMetricsProcessorTest {
   private static final double T1P1_BYTES_SIZE = 300.0;
   private static final double T2P0_BYTES_SIZE = 200.0;
   private static final double T2P1_BYTES_SIZE = 500.0;
-  private static final Set<TopicPartition> TEST_PARTITIONS = Set.of(T1P0, T1P1, T2P0, T2P1);
-  private static final Map<TopicPartition, Double> CPU_UTIL =
+  private static final Set<TopicPartition> TEST_PARTITIONS = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(T1P0, T1P1, T2P0, T2P1)));
+  /*private static final Map<TopicPartition, Double> CPU_UTIL =
       Map.of(T1P0, MOCK_NUM_CPU_CORES
                    * estimateLeaderCpuUtilPerCore(B0_CPU,
                                                   B0_ALL_TOPIC_BYTES_IN,
@@ -110,7 +111,38 @@ public class CruiseControlMetricsProcessorTest {
                                                   B0_ALL_TOPIC_BYTES_OUT + B0_TOPIC1_REPLICATION_BYTES_OUT + B0_TOPIC2_REPLICATION_BYTES_OUT,
                                                   B0_TOPIC1_REPLICATION_BYTES_IN,
                                                   B0_TOPIC2_BYTES_IN / 2,
-                                                  (B0_TOPIC2_BYTES_OUT + B0_TOPIC2_REPLICATION_BYTES_OUT) / 2));
+                                                  (B0_TOPIC2_BYTES_OUT + B0_TOPIC2_REPLICATION_BYTES_OUT) / 2));*/
+  private static final Map<TopicPartition, Double> CPU_UTIL = new HashMap<>(4);
+  static {
+    CPU_UTIL.put(T1P0, MOCK_NUM_CPU_CORES
+        * estimateLeaderCpuUtilPerCore(B0_CPU,
+        B0_ALL_TOPIC_BYTES_IN,
+        B0_ALL_TOPIC_BYTES_OUT + B0_TOPIC1_REPLICATION_BYTES_OUT + B0_TOPIC2_REPLICATION_BYTES_OUT,
+        B0_TOPIC1_REPLICATION_BYTES_IN,
+        B0_TOPIC1_BYTES_IN,
+        B0_TOPIC1_BYTES_OUT + B0_TOPIC1_REPLICATION_BYTES_OUT));
+    CPU_UTIL.put(T1P1, MOCK_NUM_CPU_CORES
+        * estimateLeaderCpuUtilPerCore(B1_CPU,
+        B1_ALL_TOPIC_BYTES_IN,
+        B1_ALL_TOPIC_BYTES_OUT + B1_TOPIC1_REPLICATION_BYTES_OUT,
+        B1_TOPIC1_REPLICATION_BYTES_IN + B1_TOPIC2_REPLICATION_BYTES_IN,
+        B1_TOPIC1_BYTES_IN,
+        B1_TOPIC1_BYTES_OUT + B1_TOPIC1_REPLICATION_BYTES_OUT));
+    CPU_UTIL.put(T2P0, MOCK_NUM_CPU_CORES
+        * estimateLeaderCpuUtilPerCore(B0_CPU,
+        B0_ALL_TOPIC_BYTES_IN,
+        B0_ALL_TOPIC_BYTES_OUT + B0_TOPIC1_REPLICATION_BYTES_OUT + B0_TOPIC2_REPLICATION_BYTES_OUT,
+        B0_TOPIC1_REPLICATION_BYTES_IN,
+        B0_TOPIC2_BYTES_IN / 2,
+        (B0_TOPIC2_BYTES_OUT + B0_TOPIC2_REPLICATION_BYTES_OUT) / 2));
+    CPU_UTIL.put(T2P1, MOCK_NUM_CPU_CORES
+        * estimateLeaderCpuUtilPerCore(B0_CPU,
+        B0_ALL_TOPIC_BYTES_IN,
+        B0_ALL_TOPIC_BYTES_OUT + B0_TOPIC1_REPLICATION_BYTES_OUT + B0_TOPIC2_REPLICATION_BYTES_OUT,
+        B0_TOPIC1_REPLICATION_BYTES_IN,
+        B0_TOPIC2_BYTES_IN / 2,
+        (B0_TOPIC2_BYTES_OUT + B0_TOPIC2_REPLICATION_BYTES_OUT) / 2));
+  }
   private final Time _time = new MockTime(0, 100L, TimeUnit.NANOSECONDS.convert(100L, TimeUnit.MILLISECONDS));
 
   private static BrokerCapacityConfigResolver mockBrokerCapacityConfigResolver() throws TimeoutException, BrokerCapacityResolutionException {
